--- a/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/vars/main.yml
@@ -48,19 +48,9 @@ changedetection_browser_container_secrets_combined: >-
 # Container Labels
 ###############################################################################
 
-# This is done as a list and converted to a dict in order to use variables in the key name
-changedetection_container_labels_traefik:
-  - key: traefik.enable
-    value: "true"
-  - key: traefik.docker.network
-    value: "{{ common_traefik_network }}"
-  - key: traefik.http.routers.{{ changedetection_name }}.rule
-    value: Host(`{{ changedetection_traefik_host }}`)
-  - key: traefik.http.routers.{{ changedetection_name }}.entrypoints
-    value: "{{ common_traefik_entrypoint }}"
-  - key: traefik.http.services.{{ changedetection_name }}.loadbalancer.server.port
-    value: "5000"
-changedetection_container_labels_defaults: "{{ changedetection_traefik_enable | ternary((changedetection_container_labels_traefik | items2dict), {}) }}"
+changedetection_container_labels_defaults: >
+  {{ changedetection_traefik_enable
+  | ternary(lookup('jaredhocutt.homelab.traefik_labels', changedetection_name, changedetection_traefik_host, '5000'), {}) }}
 
 changedetection_browser_container_labels_defaults: {}
 
