--- a/collections/ansible_collections/jaredhocutt/homelab/roles/immich/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/immich/vars/main.yml
@@ -83,19 +83,9 @@ immich_redis_container_secrets_combined: >-
 # Container Labels
 ###############################################################################
 
-# This is done as a list and converted to a dict in order to use variables in the key name
-immich_container_labels_traefik:
-  - key: traefik.enable
-    value: "true"
-  - key: traefik.docker.network
-    value: "{{ common_traefik_network }}"
-  - key: traefik.http.routers.{{ immich_name }}.rule
-    value: Host(`{{ immich_traefik_host }}`)
-  - key: traefik.http.routers.{{ immich_name }}.entrypoints
-    value: "{{ common_traefik_entrypoint }}"
-  - key: traefik.http.services.{{ immich_name }}.loadbalancer.server.port
-    value: "2283"
-immich_container_labels_defaults: "{{ immich_traefik_enable | ternary((immich_container_labels_traefik | items2dict), {}) }}"
+immich_container_labels_defaults: >
+  {{ immich_traefik_enable
+  | ternary(lookup('jaredhocutt.homelab.traefik_labels', immich_name, immich_traefik_host, '2283'), {}) }}
 
 immich_machine_learning_container_labels_defaults: {}
 
