--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/vars/main.yml
@@ -32,19 +32,9 @@ sonarr_container_secrets_combined: >-
 # Container Labels
 ###############################################################################
 
-# This is done as a list and converted to a dict in order to use variables in the key name
-sonarr_container_labels_traefik:
-  - key: traefik.enable
-    value: "true"
-  - key: traefik.docker.network
-    value: "{{ common_traefik_network }}"
-  - key: traefik.http.routers.{{ sonarr_name }}.rule
-    value: Host(`{{ sonarr_traefik_host }}`)
-  - key: traefik.http.routers.{{ sonarr_name }}.entrypoints
-    value: "{{ common_traefik_entrypoint }}"
-  - key: traefik.http.services.{{ sonarr_name }}.loadbalancer.server.port
-    value: "8989"
-sonarr_container_labels_defaults: "{{ sonarr_traefik_enable | ternary((sonarr_container_labels_traefik | items2dict), {}) }}"
+sonarr_container_labels_defaults: >
+  {{ sonarr_traefik_enable
+  | ternary(lookup('jaredhocutt.homelab.traefik_labels', sonarr_name, sonarr_traefik_host, '8989'), {}) }}
 
 sonarr_container_labels_combined: >-
   {{ sonarr_container_labels_defaults
