--- a/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/vars/main.yml
@@ -32,19 +32,9 @@ calibre_container_secrets_combined: >-
 # Container Labels
 ###############################################################################
 
-# This is done as a list and converted to a dict in order to use variables in the key name
-calibre_container_labels_traefik:
-  - key: traefik.enable
-    value: "true"
-  - key: traefik.docker.network
-    value: "{{ common_traefik_network }}"
-  - key: traefik.http.routers.{{ calibre_name }}.rule
-    value: Host(`{{ calibre_traefik_host }}`)
-  - key: traefik.http.routers.{{ calibre_name }}.entrypoints
-    value: "{{ common_traefik_entrypoint }}"
-  - key: traefik.http.services.{{ calibre_name }}.loadbalancer.server.port
-    value: "8080"
-calibre_container_labels_defaults: "{{ calibre_traefik_enable | ternary((calibre_container_labels_traefik | items2dict), {}) }}"
+calibre_container_labels_defaults: >
+  {{ calibre_traefik_enable
+  | ternary(lookup('jaredhocutt.homelab.traefik_labels', calibre_name, calibre_traefik_host, '8080'), {}) }}
 
 calibre_container_labels_combined: >-
   {{ calibre_container_labels_defaults
