--- a/collections/ansible_collections/jaredhocutt/homelab/roles/homarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/homarr/vars/main.yml
@@ -34,19 +34,9 @@ homarr_container_secrets_combined: >-
 # Container Labels
 ###############################################################################
 
-# This is done as a list and converted to a dict in order to use variables in the key name
-homarr_container_labels_traefik:
-  - key: traefik.enable
-    value: "true"
-  - key: traefik.docker.network
-    value: "{{ common_traefik_network }}"
-  - key: traefik.http.routers.{{ homarr_name }}.rule
-    value: Host(`{{ homarr_traefik_host }}`)
-  - key: traefik.http.routers.{{ homarr_name }}.entrypoints
-    value: "{{ common_traefik_entrypoint }}"
-  - key: traefik.http.services.{{ homarr_name }}.loadbalancer.server.port
-    value: "7575"
-homarr_container_labels_defaults: "{{ homarr_traefik_enable | ternary((homarr_container_labels_traefik | items2dict), {}) }}"
+homarr_container_labels_defaults: >
+  {{ homarr_traefik_enable
+  | ternary(lookup('jaredhocutt.homelab.traefik_labels', homarr_name, homarr_traefik_host, '7575'), {}) }}
 
 homarr_container_labels_combined: >-
   {{ homarr_container_labels_defaults
