--- a/collections/ansible_collections/jaredhocutt/homelab/roles/karakeep/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/karakeep/vars/main.yml
@@ -65,19 +65,9 @@ karakeep_meilisearch_container_secrets_combined: >-
 # Container Labels
 ###############################################################################
 
-# This is done as a list and converted to a dict in order to use variables in the key name
-karakeep_container_labels_traefik:
-  - key: traefik.enable
-    value: "true"
-  - key: traefik.docker.network
-    value: "{{ common_traefik_network }}"
-  - key: traefik.http.routers.{{ karakeep_name }}.rule
-    value: Host(`{{ karakeep_traefik_host }}`)
-  - key: traefik.http.routers.{{ karakeep_name }}.entrypoints
-    value: "{{ common_traefik_entrypoint }}"
-  - key: traefik.http.services.{{ karakeep_name }}.loadbalancer.server.port
-    value: "3000"
-karakeep_container_labels_defaults: "{{ karakeep_traefik_enable | ternary((karakeep_container_labels_traefik | items2dict), {}) }}"
+karakeep_container_labels_defaults: >
+  {{ karakeep_traefik_enable
+  | ternary(lookup('jaredhocutt.homelab.traefik_labels', karakeep_name, karakeep_traefik_host, '3000'), {}) }}
 
 karakeep_chrome_container_labels_defaults: {}
 
