--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
@@ -32,19 +32,9 @@ tautulli_container_secrets_combined: >-
 # Container Labels
 ###############################################################################
 
-# This is done as a list and converted to a dict in order to use variables in the key name
-tautulli_container_labels_traefik:
-  - key: traefik.enable
-    value: "true"
-  - key: traefik.docker.network
-    value: "{{ common_traefik_network }}"
-  - key: traefik.http.routers.{{ tautulli_name }}.rule
-    value: Host(`{{ tautulli_traefik_host }}`)
-  - key: traefik.http.routers.{{ tautulli_name }}.entrypoints
-    value: "{{ common_traefik_entrypoint }}"
-  - key: traefik.http.services.{{ tautulli_name }}.loadbalancer.server.port
-    value: "8181"
-tautulli_container_labels_defaults: "{{ tautulli_traefik_enable | ternary((tautulli_container_labels_traefik | items2dict), {}) }}"
+tautulli_container_labels_defaults: >
+  {{ tautulli_traefik_enable
+  | ternary(lookup('jaredhocutt.homelab.traefik_labels', tautulli_name, tautulli_traefik_host, '8181'), {}) }}
 
 tautulli_container_labels_combined: >-
   {{ tautulli_container_labels_defaults
