--- a/collections/ansible_collections/jaredhocutt/homelab/roles/vault/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/vault/vars/main.yml
@@ -35,19 +35,9 @@ vault_container_secrets_combined: >-
 # Container Labels
 ###############################################################################
 
-# This is done as a list and converted to a dict in order to use variables in the key name
-vault_container_labels_traefik:
-  - key: traefik.enable
-    value: "true"
-  - key: traefik.docker.network
-    value: "{{ common_traefik_network }}"
-  - key: traefik.http.routers.{{ vault_name }}.rule
-    value: Host(`{{ vault_traefik_host }}`)
-  - key: traefik.http.routers.{{ vault_name }}.entrypoints
-    value: "{{ common_traefik_entrypoint }}"
-  - key: traefik.http.services.{{ vault_name }}.loadbalancer.server.port
-    value: "8200"
-vault_container_labels_defaults: "{{ vault_traefik_enable | ternary((vault_container_labels_traefik | items2dict), {}) }}"
+vault_container_labels_defaults: >
+  {{ vault_traefik_enable
+  | ternary(lookup('jaredhocutt.homelab.traefik_labels', vault_name, vault_traefik_host, '8200'), {}) }}
 
 vault_container_labels_combined: >-
   {{ vault_container_labels_defaults
