--- a/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/vars/main.yml
@@ -62,19 +62,9 @@ warracker_postgres_container_secrets_combined: >-
 # Container Labels
 ###############################################################################
 
-# This is done as a list and converted to a dict in order to use variables in the key name
-warracker_container_labels_traefik:
-  - key: traefik.enable
-    value: "true"
-  - key: traefik.docker.network
-    value: "{{ common_traefik_network }}"
-  - key: traefik.http.routers.{{ warracker_name }}.rule
-    value: Host(`{{ warracker_traefik_host }}`)
-  - key: traefik.http.routers.{{ warracker_name }}.entrypoints
-    value: "{{ common_traefik_entrypoint }}"
-  - key: traefik.http.services.{{ warracker_name }}.loadbalancer.server.port
-    value: "80"
-warracker_container_labels_defaults: "{{ warracker_traefik_enable | ternary((warracker_container_labels_traefik | items2dict), {}) }}"
+warracker_container_labels_defaults: >
+  {{ warracker_traefik_enable
+  | ternary(lookup('jaredhocutt.homelab.traefik_labels', warracker_name, warracker_traefik_host, '80'), {}) }}
 
 warracker_postgres_container_labels_defaults: {}
 
