--- a/collections/ansible_collections/jaredhocutt/homelab/roles/traefik/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/traefik/tasks/main.yml
@@ -71,7 +71,7 @@
       - "{{ traefik_volume_certs }}:/certs"
       - "{{ traefik_volume_dynamic }}:/dynamic"
     publish: "{{ traefik_ports }}"
-    command: "{{ traefik_command_base + traefik_command }}"
+    command: "{{ traefik_command_defaults + traefik_command }}"
     labels: "{{ traefik_container_labels_combined }}"
     quadlet_file_mode: "0600"
     quadlet_options: "{{ traefik_quadlet_options_combined }}"
